--- a/index.html
+++ b/index.html
@@ -6,11 +6,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ceviche+One&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ceviche+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/body.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/header.css">
 
 </head>
 
 <body>
+
+    <div class="container">
+        <div class=" page age1">
+            <header class="main_header">
+                <div class="logo"></div>
+                <div class="navbar">
+                    <div class="navbar_item">skills</div>
+                    <div class="navbar_item">contact us</div>
+                    <div class="navbar_item">projects</div>
+
+
+                </div>
+            </header>
+            <div class="main_body">
+                <div class="sidebar"></div>
+                <div class="main_text">
+
+                    <h1 class="welcome_msg"> <span class="hi">Hi,</span>
+                        <br> <span class="wlc_msg_rest">I’m Tahrer. Nice to meet you.</span>
+                    </h1>
+                    <div class="about_me_btn">about me</div>
+
+                </div>
+                <div class="main_img">
+                    <img src="image/myimage.jpg" alt="my image" class="my_img">
+
+                </div>
+
+
+
+            </div>
+
+            <footer class="main_footer "> </footer>
+
+        </div>
 
 </body>
 
