--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="css/body.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/follow-me.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -34,7 +36,19 @@
                 </div>
             </header>
             <div class="main_body">
-                <div class="sidebar"></div>
+                <div class="social_media_bar">
+                    <div class="icon-bar">
+                        <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+                        <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+                        <a href="#" class="google"><i class="fa fa-google"></i></a>
+                        <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+                        <a href="#" class="github"><i class="fa fa-github"></i></a>
+                    </div>
+
+                </div>
+
+
+
                 <div class="main_text">
 
                     <h1 class="welcome_msg"> <span class="hi">Hi,</span>
