--- a/index.html
+++ b/index.html
@@ -17,58 +17,73 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/follow-me.css">
+    <link rel="stylesheet" href="css/page2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
 <body>
 
-    <div class="container">
-        <div class=" page age1">
-            <header class="main_header">
-                <div class="logo"></div>
-                <div class="navbar">
-                    <div class="navbar_item">skills</div>
-                    <div class="navbar_item">contact us</div>
-                    <div class="navbar_item">projects</div>
 
-
-                </div>
-            </header>
-            <div class="main_body">
-                <div class="social_media_bar">
-                    <div class="icon-bar">
-                        <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                        <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                        <a href="#" class="google"><i class="fa fa-google"></i></a>
-                        <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-                        <a href="#" class="github"><i class="fa fa-github"></i></a>
-                    </div>
-
-                </div>
-
-
-
-                <div class="main_text">
-
-                    <h1 class="welcome_msg"> <span class="hi">Hi,</span>
-                        <br> <span class="wlc_msg_rest">I’m Tahrer. Nice to meet you.</span>
-                    </h1>
-                    <div class="about_me_btn">about me</div>
-
-                </div>
-                <div class="main_img">
-                    <img src="image/myimage.jpg" alt="my image" class="my_img">
-
-                </div>
-
+    <div class=" page home_page">
+        <header class="main_header">
+            <div class="logo"></div>
+            <div class="navbar">
+                <div class="navbar_item">skills</div>
+                <div class="navbar_item">contact us</div>
+                <div class="navbar_item">projects</div>
 
 
             </div>
+        </header>
+        <div class="main_body">
+            <div class="social_media_bar">
+                <div class="icon-bar">
+                    <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+                    <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+                    <a href="#" class="google"><i class="fa fa-google"></i></a>
+                    <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a href="#" class="github"><i class="fa fa-github"></i></a>
+                </div>
 
-            <footer class="main_footer "> </footer>
+            </div>
+
+
+
+            <div class="main_text">
+
+                <h1 class="welcome_msg"> <span class="hi">Hi,</span>
+                    <br> <span class="wlc_msg_rest">I’m Tahrer. Nice to meet you.</span>
+                </h1>
+                <div class="about_me_btn">about me</div>
+
+            </div>
+            <div class="main_img">
+                <img src="image/myimage.jpg" alt="my image" class="my_img">
+
+            </div>
+        </div>
+
+        <footer class="main_footer"> </footer>
+
+    </div>
+
+    <div class="page page2">
+        <div class="page2_body">
+            <h1 class="page_2_text">I'm proud to have collaborated with some awesome companies:</h1>
+            <div class="companies">
+                <div class="company_logo"></div>
+                <div class="company_logo">logo</div>
+                <div class="company_logo">logo</div>
+                <div class="company_logo">logo</div>
+                <div class="company_logo">logo</div>
+
+            </div>
 
         </div>
+        <footer class="footer"> </footer>
+
+    </div>
 
 </body>
 
