--- a/index.html
+++ b/index.html
@@ -72,11 +72,12 @@
         <div class="page2_body">
             <h1 class="page_2_text">I'm proud to have collaborated with some awesome companies:</h1>
             <div class="companies">
-                <div class="company_logo"></div>
-                <div class="company_logo">logo</div>
-                <div class="company_logo">logo</div>
-                <div class="company_logo">logo</div>
-                <div class="company_logo">logo</div>
+
+                <div class="company_logo"><img src="image/google.png" alt="company logo" class="company_logo_img"></div>
+                <div class="company_logo"><img src="image/intel.png" alt="company logo" class="company_logo_img"></div>
+                <div class="company_logo"><img src="image/meta.png" alt="company logo" class="company_logo_img"></div>
+                <div class="company_logo"><img src="image/microsoft.png" alt="company logo" class="company_logo_img"></div>
+
 
             </div>
 
