--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,130 +28,116 @@
 
 <body>
 
+    <div class="container">
+        <div class="page" id="home_page">
+            <header class="main_header">
+                <div class="logo"><img src="image/logo2.png" alt="company logo" class="company_logo_img"></div>
+                <div class="navbar">
+                    <div class="navbar_item">skills</div>
+                    <div class="navbar_item">contact us</div>
+                    <div class="navbar_item">projects</div>
 
-    <!-- <div class=" page" id="home_page">
-    <header class="main_header">
-        <div class="logo"></div>
-        <div class="navbar">
-            <div class="navbar_item">skills</div>
-            <div class="navbar_item">contact us</div>
-            <div class="navbar_item">projects</div>
+
+                </div>
+            </header>
+            <div class="main_body">
+                <div class="social_media_bar">
+                    <div class="icon-bar">
+                        <a href="https://www.facebook.com/tahrer.ad/" class="facebook"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.gmail.com/" class="google"><i class="fa fa-google"></i></a>
+                        <a href="https://www.linkedin.com/in/tahrer-abu-diab-93927512b" class="linkedin"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://github.com/tahrer007" class="github"><i class="fa fa-github"></i></a>
+                    </div>
+
+                </div>
 
 
-        </div>
-    </header>
-    <div class="main_body">
-        <div class="social_media_bar">
-            <div class="icon-bar">
-                <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                <a href="#" class="google"><i class="fa fa-google"></i></a>
-                <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-                <a href="#" class="github"><i class="fa fa-github"></i></a>
+
+                <div class="main_text">
+
+                    <h1 class="welcome_msg"> <span class="hi">Hi,</span>
+                        <br> <span class="wlc_msg_rest">I’m Tahrer. Nice to meet you.</span>
+                    </h1>
+                    <div class="about_me_btn">about me</div>
+
+                </div>
+                <div class="main_img">
+                    <img src="image/myimage.jpg" alt="my image" class="my_img">
+
+                </div>
             </div>
 
-        </div>
-
-
-
-        <div class="main_text">
-
-            <h1 class="welcome_msg"> <span class="hi">Hi,</span>
-                <br> <span class="wlc_msg_rest">I’m Tahrer. Nice to meet you.</span>
-            </h1>
-            <div class="about_me_btn">about me</div>
 
         </div>
-        <div class="main_img">
-            <img src="image/myimage.jpg" alt="my image" class="my_img">
+
+        <div class="page other_pages">
+            <div class="other_pages_body">
+                <h1 class="other_pages_text">I'm proud to have collaborated with some awesome companies:</h1>
+                <div class="companies">
+
+                    <div class="company_logo logo_border"><img src="image/google.png" alt="company logo" class="company_logo_img"></div>
+                    <div class="company_logo logo_border"><img src="image/intel.png" alt="company logo" class="company_logo_img"></div>
+                    <div class="company_logo logo_border"><img src="image/meta.png" alt="company logo" class="company_logo_img"></div>
+                    <div class="company_logo logo_border"><img src="image/microsoft.png" alt="company logo" class="company_logo_img"></div>
+
+
+                </div>
+
+            </div>
+            <footer class="footer">
+
+                <div class="copy_rights">
+                    <p>© 2021 Tahrer abu diab</p>
+                </div>
+                <div class="back_to_top">
+                    <a href="#home_page"><i class="fas fa-chevron-circle-up fa-3x"> </i> </a>
+                </div>
+            </footer>
+
+        </div>
+
+        <div class="page other_pages page3">
+
+            <div class="other_pages_body page3_body">
+
+
+                <div class="page3_header">
+                    <h1 class="other_pages_text">feel free to contact me </h1>
+                </div>
+                <div class="page3_form">
+                    <form> <label for="label">First Name</label>
+                        <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+                        <label for="label">Last Name</label>
+                        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+                        <label for="label">e-mail</label>
+                        <input type="text" id="lname" name="e-mail" placeholder="Your  e-mail..">
+
+                        <label for="subject">Subject</label>
+                        <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+                        <input type="submit" value="Submit" class="about_me_btn"></form>
+                </div>
+
+
+            </div>
+            <footer class="footer page3_footer">
+
+                <div class="copy_rights">
+                    <p>© 2021 Tahrer abu diab</p>
+                </div>
+                <div class="back_to_top">
+                    <a href="#home_page"><i class="fas fa-chevron-circle-up fa-3x"> </i> </a>
+
+
+                </div>
+            </footer>
+
+
 
         </div>
     </div>
-
-
-    </div>
-
-    <div class="page other_pages">
-        <div class="other_pages_body">
-            <h1 class="other_pages_text">I'm proud to have collaborated with some awesome companies:</h1>
-            <div class="companies">
-
-                <div class="company_logo logo_border"><img src="image/google.png" alt="company logo" class="company_logo_img"></div>
-                <div class="company_logo logo_border"><img src="image/intel.png" alt="company logo" class="company_logo_img"></div>
-                <div class="company_logo logo_border"><img src="image/meta.png" alt="company logo" class="company_logo_img"></div>
-                <div class="company_logo logo_border"><img src="image/microsoft.png" alt="company logo" class="company_logo_img"></div>
-
-
-            </div>
-
-        </div>
-        <footer class="footer">
-
-            <div class="copy_rights">
-                <p>© 2021 Tahrer abu diab</p>
-            </div>
-            <div class="back_to_top">
-                <a href="#home_page"><i class="fas fa-chevron-circle-up fa-3x"> </i> </a>
-            </div>
-        </footer>
-
-    </div>
--->
-    <div class="page other_pages page3">
-
-        <div class="other_pages_body page3_body">
-
-            <!--
- 
-
-            <div class="form">
-                
-
-
-
-
-
-            </div>
-
-
-            -->
-            <div class="page3_header">
-                <h1 class="other_pages_text">feel free to contact me </h1>
-            </div>
-            <div class="page3_form">
-                <form> <label for="label">First Name</label>
-                    <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-                    <label for="label">Last Name</label>
-                    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-                    <label for="label">e-mail</label>
-                    <input type="text" id="lname" name="e-mail" placeholder="Your  e-mail..">
-
-                    <label for="subject">Subject</label>
-                    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-                    <input type="submit" value="Submit"></form>
-            </div>
-
-
-        </div>
-        <footer class="footer">
-
-            <div class="copy_rights">
-                <p>© 2021 Tahrer abu diab</p>
-            </div>
-            <div class="back_to_top">
-                <a href="#home_page"><i class="fas fa-chevron-circle-up fa-3x"> </i> </a>
-
-
-            </div>
-        </footer>
-
-
-
-    </div>
-
 </body>
 
 </html>
