--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <header class="main_header">
                 <div class="logo"><img src="image/logo2.png" alt="company logo" class="company_logo_img"></div>
                 <div class="navbar">
-                    <div class="navbar_item">skills</div>
-                    <div class="navbar_item">contact us</div>
-                    <div class="navbar_item">projects</div>
+                    <div class="navbar_item">home</div>
+                    <div class="navbar_item">experiences</div>
+                    <div class="navbar_item">contact</div>
 
 
                 </div>
@@ -77,8 +77,9 @@
 
                     <div class="company_logo logo_border"><img src="image/google.png" alt="company logo" class="company_logo_img"></div>
                     <div class="company_logo logo_border"><img src="image/intel.png" alt="company logo" class="company_logo_img"></div>
-                    <div class="company_logo logo_border"><img src="image/meta.png" alt="company logo" class="company_logo_img"></div>
                     <div class="company_logo logo_border"><img src="image/microsoft.png" alt="company logo" class="company_logo_img"></div>
+                    <div class="company_logo logo_border"><img src="image/meta.png" alt="company logo" class="company_logo_img"></div>
+
 
 
                 </div>
