--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <link rel="stylesheet" href="css/follow-me.css">
     <link rel="stylesheet" href="css/page2.css">
     <link rel="stylesheet" href="css/page3.css">
+    <link rel="stylesheet" href="css/page1_mobile.css">
+    <link rel="stylesheet" href="css/page2_mobile.css">
+    <link rel="stylesheet" href="css/page3_mobile.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -29,16 +32,18 @@
 <body>
 
     <div class="container">
+
         <div class="page" id="home_page">
             <header class="main_header">
                 <div class="logo"><img src="image/logo2.png" alt="company logo" class="company_logo_img"></div>
                 <div class="navbar">
                     <div class="navbar_item">home</div>
-                    <div class="navbar_item">experiences</div>
-                    <div class="navbar_item">contact</div>
+                    <div class="navbar_item ">experiences</div>
+                    <div class="navbar_item ">contact</div>
 
 
                 </div>
+
             </header>
             <div class="main_body">
                 <div class="social_media_bar">
@@ -50,9 +55,6 @@
                     </div>
 
                 </div>
-
-
-
                 <div class="main_text">
 
                     <h1 class="welcome_msg"> <span class="hi">Hi,</span>
@@ -116,20 +118,20 @@
                         <input type="text" id="lname" name="e-mail" placeholder="Your  e-mail..">
 
                         <label for="subject">Subject</label>
-                        <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+                        <textarea id="subject" name="subject" placeholder="Write something.."></textarea>
 
-                        <input type="submit" value="Submit" class="about_me_btn"></form>
+                        <input type="submit " value="Submit " class="about_me_btn submit"></form>
                 </div>
 
 
             </div>
-            <footer class="footer page3_footer">
+            <footer class="footer page3_footer ">
 
-                <div class="copy_rights">
+                <div class="copy_rights ">
                     <p>© 2021 Tahrer abu diab</p>
                 </div>
-                <div class="back_to_top">
-                    <a href="#home_page"><i class="fas fa-chevron-circle-up fa-3x"> </i> </a>
+                <div class="back_to_top ">
+                    <a href="#home_page "><i class="fas fa-chevron-circle-up fa-3x "> </i> </a>
 
 
                 </div>
