--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <label for="subject">Subject</label>
                         <textarea id="subject" name="subject" placeholder="Write something.."></textarea>
 
-                        <input type="submit " value="Submit " class="about_me_btn submit"></form>
+                        <input type="submit" value="Submit" class="about_me_btn"></form>
                 </div>
 
 
