--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 
     <div class="container">
 
-
+        <!-----------------------------page #1----------------------------------------->
         <div class="page" id="home_page">
+            <!-----------------------------page #1 header----------------------------------------->
             <header class="main_header">
                 <div class="logo"><img src="image/logo2.png" alt="company logo" class="company_logo_img"></div>
                 <div class="navbar">
@@ -46,6 +47,7 @@
                 </div>
 
             </header>
+            <!-----------------------------page #1 body----------------------------------------->
             <div class="main_body">
                 <div class="social_media_bar">
                     <div class="icon-bar">
@@ -73,8 +75,9 @@
 
         </div>
 
-
+        <!-----------------------------page #2 ----------------------------------------->
         <div class="page other_pages">
+            <!-----------------------------page #2 body----------------------------------------->
             <div class="other_pages_body">
                 <h1 class="other_pages_text">I'm proud to have collaborated with some awesome companies:</h1>
                 <div class="companies">
@@ -89,6 +92,8 @@
                 </div>
 
             </div>
+            <!-----------------------------page #2 footer----------------------------------------->
+
             <footer class="footer">
 
                 <div class="copy_rights">
@@ -101,8 +106,9 @@
 
         </div>
 
-
+        <!-----------------------------page #3 ----------------------------------------->
         <div class="page other_pages page3">
+            <!-----------------------------page #2 body----------------------------------------->
 
             <div class="other_pages_body page3_body">
 
@@ -128,6 +134,8 @@
 
 
             </div>
+            <!-----------------------------page #3 footer----------------------------------------->
+
             <footer class="footer page3_footer ">
 
                 <div class="copy_rights ">
